--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -5,32 +5,62 @@
 {% block content %}
 <br>
 <form action="{% url 'restaurant-list' %}">
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Search" aria-label="Search" name="q" value="{{request.GET.q}}">
-    <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="submit">Search</button>
-    </div>
-  </div>
+	<div class="input-group mb-3">
+		<input type="text" class="form-control" placeholder="Search" aria-label="Search" name="q" value="{{request.GET.q}}">
+		<div class="input-group-append">
+			<button class="btn btn-outline-secondary" type="submit">Search</button>
+		</div>
+	</div>
 </form>
 <div class="row">
-    {% for restaurant in restaurants %}
-    <div class="col-md-4">
-        <div class="card my-card">
-          {% if restaurant.logo %}
-            <img class="card-img-top" src="{{restaurant.logo.url}}" alt="Hey Noob, look at me...">
-          {% endif %}
-          <div class="card-body">
-            <h5 class="card-title">{{restaurant.name}}</h5>
-            <p class="card-text">{{restaurant.description|truncatechars:25}}</p>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item text-center">
-                <a href="{% url 'restaurant-detail' restaurant.id %}" class="btn btn-outline-dark">View</a>
-            </li>
-          </ul>
-        </div>
-    </div>
-    {% endfor %}
+		{% for restaurant in restaurants %}
+		<div class="col-md-4">
+				<div class="card my-card">
+					{% if restaurant.logo %}
+						<img class="card-img-top" src="{{restaurant.logo.url}}" alt="Hey Noob, look at me...">
+					{% endif %}
+					<div class="card-body">
+						<h5 class="card-title">{{restaurant.name}}</h5>
+						<p class="card-text">{{restaurant.description|truncatechars:25}}</p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item text-center">
+								<a href="{% url 'restaurant-detail' restaurant.id %}" class="btn btn-outline-dark">View</a>
+								<button onclick="favorite({{restaurant.id}})" class="btn btn-outline-dark {% if restaurant.id in my_fav %}
+								text-danger
+								{% endif %}" 
+								id="fav-{{restaurant.id}}">Favorite</button>
+						</li>
+					</ul>
+				</div>
+		</div>
+		{% endfor %}
 </div>
+
+<script type="text/javascript">
+	function favorite(restaurant_id){
+		let button_id = "#fav-"+restaurant_id
+		$.ajax({
+
+			type: "GET",
+			url: '/restaurants/'+restaurant_id+'/favorite/',
+			error: function(){
+				alret("something went wrong")
+			},
+			success: function(data){
+				if (data.action === "like"){
+					$(button_id).addClass('text-danger')
+					
+				}
+				else{
+					$(button_id).removeClass('text-danger')
+					
+				}
+			}
+			
+		})
+	}
+
+</script>
 {% endblock content %}
 
