--- a/restaurants/templates/signin.html
+++ b/restaurants/templates/signin.html
@@ -14,6 +14,7 @@
             {% csrf_token %}
             {{form|crispy}}
             <input type="submit" value="Signin" class="btn btn-outline-primary">
+            <a href="{% url 'github_login' %}">SIGNIN with GitHub</a>
         </form>
     </p>
   </div>
